--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
   <body>
     <header>
       <nav>
-        <a href="#">
+        <a href="./index.html">
           <img src="./images/logo.svg" alt=" логотип Сучасна пекарня" />
         </a>
         <ul>
-          <li><a href="">Наші традиції</a></li>
-          <li><a href="">Шеф-кухарі</a></li>
-          <li><a href="">Формати</a></li>
-          <li><a href="">Контакти</a></li>
+          <li><a href="#traditions-section">Наші традиції</a></li>
+          <li><a href="#chief-section">Шеф-кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
       <button type="button">замовити звонок</button>
     </header>
     <main>
-      <section>
+      <section id="traditions-section">
         <h1>Сучасна пекарня</h1>
       </section>
       <section>
@@ -43,7 +43,7 @@
         </p>
         <img src="./images/пекарь.jpg" alt="пекарь" />
       </section>
-      <section>
+      <section id="chief-section">
         <h2>Наші найкращі шеф -кухарі</h2>
         <ul>
           <li>
@@ -67,7 +67,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="formats-section">
         <h2>Формати</h2>
         <ul>
           <li>
@@ -87,8 +87,17 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="contacts-section">
         <h2>Приєднуйся до мережі пекарень</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636304352796!2d30.4886983771105!3d50.45667757159337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sbg!4v1762887629248!5m2!1sru!2sbg"
+          width="603"
+          height="595"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </section>
     </main>
     <footer>
@@ -122,7 +131,7 @@
           </li>
         </ul>
         <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>© 2022 Дані захищені</p>
+        <p>&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
