--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
 
   <body>
@@ -13,25 +14,27 @@
           <img src="./images/logo.svg" alt=" логотип Сучасна пекарня" />
         </a>
         <ul>
-          <li><a href="#traditions-section">Наші традиції</a></li>
-          <li><a href="#chief-section">Шеф-кухарі</a></li>
-          <li><a href="#formats-section">Формати</a></li>
-          <li><a href="#contacts-section">Контакти</a></li>
+          <li>
+            <a class="header-link" href="#traditions-section">Наші традиції</a>
+          </li>
+          <li><a class="header-link" href="#chief-section">Шеф-кухарі</a></li>
+          <li><a class="header-link" href="#formats-section">Формати</a></li>
+          <li><a class="header-link" href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
-      <button type="button">замовити звонок</button>
+      <button class="button-primary" type="button">замовити звонок</button>
     </header>
     <main>
-      <section id="traditions-section">
-        <h1>Сучасна пекарня</h1>
+      <section class="main-section" id="traditions-section">
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
       <section>
-        <ul>
+        <ul class="advantages">
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
           <li>Досвідчена управлінська команда</li>
         </ul>
-        <h2>Новий формат традицій</h2>
+        <h2 class="section-title">Новий формат традицій</h2>
         <p>
           <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
           зберегла смак традиційної випічки та натуральність інгредієнтів.
@@ -44,7 +47,9 @@
         <img src="./images/пекарь.jpg" alt="пекарь" />
       </section>
       <section id="chief-section">
-        <h2>Наші найкращі шеф -кухарі</h2>
+        <h2 class="section-title">
+          Наші найкращі<span class="chef-titles"> шеф-кухарі</span>
+        </h2>
         <ul>
           <li>
             <article>
@@ -68,7 +73,7 @@
         </ul>
       </section>
       <section id="formats-section">
-        <h2>Формати</h2>
+        <h2 class="section-title">Формати</h2>
         <ul>
           <li>
             <article>
@@ -88,7 +93,7 @@
         </ul>
       </section>
       <section id="contacts-section">
-        <h2>Приєднуйся до мережі пекарень</h2>
+        <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636304352796!2d30.4886983771105!3d50.45667757159337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sbg!4v1762887629248!5m2!1sru!2sbg"
           width="603"
