--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    /> -->
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -12,7 +18,7 @@
         <a href="./index.html">
           <img src="./images/logo.svg" alt=" логотип Сучасна пекарня" />
         </a>
-        <ul>
+        <ul class="link-text">
           <li>
             <a class="header-link" href="#traditions-section">Наші традиції</a>
           </li>
@@ -21,7 +27,7 @@
           <li><a class="header-link" href="#contacts-section">Контакти</a></li>
         </ul>
       </nav>
-      <button class="button-primary" type="button">замовити звонок</button>
+      <button class="button-primary" type="button">Замовити дзвінок</button>
     </header>
     <main>
       <section class="main-section" id="traditions-section">
@@ -29,19 +35,20 @@
       </section>
       <section>
         <ul class="advantages">
-          <li>Великий попит на ринку</li>
-          <li>Доступні за бюджетом формати</li>
-          <li>Досвідчена управлінська команда</li>
+          <li class="advantages-item">Великий попит на ринку</li>
+          <li class="advantages-item">Доступні за бюджетом формати</li>
+          <li class="advantages-item">Досвідчена управлінська команда</li>
         </ul>
         <h2 class="section-title">Новий формат традицій</h2>
-        <p>
-          <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
-          зберегла смак традиційної випічки та натуральність інгредієнтів.
+        <p class="tradition-text">
+          <span class="brand uppercase">shop bakery</span> — це пекарня, яка
+          взяла все найкраще, і зберегла смак традиційної випічки та
+          натуральність інгредієнтів.
         </p>
-        <p>
+        <p class="tradition-text">
           Ми працюємо як найвідоміші мережі —
-          <span>5 хвилин і замовлення готове</span>. А ще у наших пекарень
-          стильний дизайн та висока якість обслуговування!
+          <span class="brand">5 хвилин і замовлення готове</span>. А ще у наших
+          пекарень стильний дизайн та висока якість обслуговування!
         </p>
         <img src="./images/пекарь.jpg" alt="пекарь" />
       </section>
@@ -49,10 +56,10 @@
         <h2 class="section-title">
           Наші найкращі<span class="chef-titles"> шеф-кухарі</span>
         </h2>
-        <ul>
+        <ul class="chefs">
           <li>
             <article>
-              <h3>Настя</h3>
+              <h3 class="chef-names">Настя</h3>
               <p>Привіт, я Настя!</p>
               <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
               <p>Я випічу для вас найсмачніщі вироби</p>
@@ -60,7 +67,7 @@
           </li>
           <li>
             <article>
-              <h3>Влад</h3>
+              <h3 class="chef-names">Влад</h3>
               <p>Привіт, я Влад!</p>
               <p>
                 Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов,
@@ -73,26 +80,48 @@
       </section>
       <section id="formats-section">
         <h2 class="section-title">Формати</h2>
-        <ul>
+        <ul class="formats-list">
           <li>
             <article>
-              <h3 lang="en">Walrus</h3>
+              <h3 class="format-title" lang="en">Walrus</h3>
+              <p class="format-text">Площа: до 120 м2</p>
+              <p class="format-text">Меню: розширене меню</p>
+              <p class="format-text">
+                Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2
+                офіціанти-різнороби
+              </p>
+              <p class="format-text">Посадкові місця: є</p>
             </article>
           </li>
           <li>
             <article>
-              <h3 lang="en">Horseshoe</h3>
+              <h3 class="format-title" lang="en">Horseshoe</h3>
+              <p></p>
+              <p class="format-text">Площа: до 25 м2</p>
+              <p class="format-text">Меню: найпопулярніші позиції меню</p>
+              <p class="format-text">
+                Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря
+              </p>
+              <p class="format-text">Посадкові місця: відсутні</p>
             </article>
           </li>
           <li>
             <article>
-              <h3 lang="en">Handlebar</h3>
+              <h3 class="format-title" lang="en">Handlebar</h3>
+              <p></p>
+              <p class="format-text">Площа: до 15 м2</p>
+              <p class="format-text">Меню: найпопулярніші позиції меню</p>
+              <p class="format-text">
+                Штат: 1 продавець, 1 пекар, 1 помічник пекаря
+              </p>
+              <p class="format-text">Посадкові місця: відсутні</p>
             </article>
           </li>
         </ul>
       </section>
       <section id="contacts-section">
         <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
+        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636304352796!2d30.4886983771105!3d50.45667757159337!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sbg!4v1762887629248!5m2!1sru!2sbg"
           width="603"
@@ -109,21 +138,30 @@
         <a href="#">
           <img src="./images/logo.svg" alt=" логотип Сучасна пекарня" />
         </a>
-        <ul>
-          <li><a href="">Наші традиції</a></li>
-          <li><a href="">Шеф-кухарі</a></li>
-          <li><a href="">Формати</a></li>
-          <li><a href="">Контакти</a></li>
+        <ul class="link-text">
+          <li><a class="header-link" href="">Наші традиції</a></li>
+          <li><a class="header-link" href="">Шеф-кухарі</a></li>
+          <li><a class="header-link" href="">Формати</a></li>
+          <li><a class="header-link" href="">Контакти</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+        <ul class="contacts-text">
           <li>
-            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+            <a class="adress-link" href="tel:+380960000007"
+              >+ 38 (096) 000 00 07</a
+            >
           </li>
           <li>
-            <a href="https://share.google/5ZUeOWkhkYiIMWbpf" target="_blank"
+            <a class="adress-link" href="mailto:shopbakery@gmail.com"
+              >shopbakery@gmail.com</a
+            >
+          </li>
+          <li>
+            <a
+              class="adress-link"
+              href="https://share.google/5ZUeOWkhkYiIMWbpf"
+              target="_blank"
               >Україна, м. Київ, вул. Січових Стрільців 54</a
             >
           </li>
@@ -134,8 +172,10 @@
             <a href="#"> instagram </a>
           </li>
         </ul>
-        <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>&copy; 2022 Дані захищені</p>
+        <a class="adress-link" href="#" target="_blank"
+          >Політика конфіденційності</a
+        >
+        <p class="adress-copyright">&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
